# gmk-bookstore

./: .env.dev  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.dev  pyproject.toml  pytest.ini  render.yml
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/: factories.py  tests_models.py  tests_serializers.py  urls.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/: tests_models.py  tests_order_viewset.py  tests_serializers.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py  tests_models.py  urls.py
product/migrations/: 0001_initial.py  0002_remove_product_categories_product_category.py  0003_alter_product_price.py  0003_rename_name_category_title_rename_name_product_title_and_more.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: tests_category_viewset.py  tests_models.py  tests_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
