[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["GustavoKasaki <gmkasaki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2"
djangorestframework = "^3.16.0"
pytest = "^8.4.1"
factory-boy = "^3.3.3"
poetry-core = ">=2.0.0,<3.0.0"
pytest-django = "^4.11.1"
django-extensions = "^4.1"
django-debug-toolbar = "^5.2.0"
psycopg2-binary = "^2.9.10"
flake8 = "^7.3.0"
whitenoise = "^6.9.0"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
